Fiks null pointer exception